--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-leaflet": "^4.2.1",
     "react-phone-number-input": "^3.3.10",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-select-country-list": "^2.2.3",
